fix: fix of proposed correction in controller and service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.initialization-mode=always
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=lozinka
+reservations= http://localhost:8765/reservations/reservationInFuture/
 
 
 spring.application.name=hotel-service
