--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 #Spring DataSource - BAZA PODATAKA MYSQL
-spring.datasource.url=jdbc:mysql://localhost:3306/hotel-service?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3307/hotel-service?createDatabaseIfNotExist=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.defer-datasource-initialization=true
 spring.datasource.initialization-mode=always
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=lozinka
+reservations= http://localhost:8765/reservations/reservationInFuture/
 
 
 spring.application.name=hotel-service
