--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ reservations= http://localhost:8765/reservations/reservationInFuture/
 
 spring.application.name=hotel-service
 server.port=8200
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://auth-server:9000
