--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Spring DataSource - BAZA PODATAKA MYSQL
-spring.datasource.url=jdbc:mysql://localhost:3306/hotel-service?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://hotel-service-mysql:3306/hotel-service
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.defer-datasource-initialization=true
 spring.datasource.initialization-mode=always
