--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,28 +2,33 @@
 version: '3'
 services:
     mysqldb:
-        image: mysql:8.0.19
-        container_name: hotel-service-mysql
+        image: mysql
+        networks:
+            - hotel-mysql
         restart: always
         environment:
-            MYSQL_ROOT_PASSWORD: lozinka,
-            MYSQL_DATABASE: hotel-service
+            MYSQL_ROOT_PASSWORD: lozinka
+            MYSQL_DATABASE: hotel-service 
         ports:
-            - 3308:3307
-       
+            - 3308:3306
+        healthcheck:
+            test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
+            timeout: 45s
+            interval: 10s
+            retries: 10
     hotel-service:
         build:
             context: .
             dockerfile: Dockerfile
-            
-        environment:
-            SPRING_DATASOURCE_URL: jdbc:mysql://hotel-service:3307/hotel-service
-            SPRING_DATASOURCE_USERNAME: root
-            SPRING_DATASOURCE_PASSWORD: lozinka
-            SPRING_DATASOURCE_DRIVER-CLASS-NAME: com.mysql.cj.jdbc.Driverr
-        image: 
-            hotel-service
+        image: hotel-service
         ports:
-            - "8200:8200"
+            - 8200:8200
+        networks:
+            - hotel-mysql
         depends_on:
-            - mysqldb
+            mysqldb:
+                  condition: service_healthy
+networks:
+  hotel-mysql:            
+       
+   
