--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 #Spring DataSource - BAZA PODATAKA MYSQL
-spring.datasource.url=jdbc:mysql://hotel-service-mysql:3306/hotel-service
+spring.datasource.url=jdbc:mysql://mysqldb:3306/hotel-service?autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.defer-datasource-initialization=true
 spring.datasource.initialization-mode=always
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=lozinka
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
 reservations= http://localhost:8765/reservations/reservationInFuture/
 
 
