--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,19 @@
 #Spring DataSource - BAZA PODATAKA MYSQL
-spring.datasource.url=jdbc:mysql://localhost:3306/hotel-service?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://mysqldb:3306/hotel-service?autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&enabledTLSProtocols=TLSv1.2
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.defer-datasource-initialization=true
 spring.datasource.initialization-mode=always
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=lozinka
-reservations= http://localhost:8765/reservations/reservationInFuture/
+spring.datasource.password=root
+#spring.datasource.platform=mysql
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+gateway.url=http://localhost:8765/
+reservations=http://localhost:8765/reservations/reservationInFuture/
 
 
 spring.application.name=hotel-service
 server.port=8200
+
